# FreeViewer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/capture/: audio.rs  mod.rs  screen.rs
src/client/: connection_manager.rs  mod.rs  remote_session.rs
src/daemon/: main.rs
src/host/: file_server.rs  input_handler.rs  mod.rs  screen_capture.rs
src/protocol/: encryption.rs  messages.rs  mod.rs  network.rs
src/security/: authentication.rs  certificates.rs  mod.rs
src/ui/: connection_panel.rs  file_transfer.rs  mod.rs  modern_ui.rs  remote_desktop.rs  settings_panel.rs
