[package]
name = "freeviewer"
version = "0.1.0"
edition = "2021"
description = "Open-source remote desktop software - free TeamViewer alternative"
license = "GPL-3.0"
repository = "https://github.com/yourusername/freeviewer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
keywords = ["remote-desktop", "screen-sharing", "teamviewer", "vnc", "cross-platform"]
categories = ["network-programming", "multimedia"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
quinn = "0.11"  # QUIC protocol for fast, secure connections
rustls = "0.22"
rcgen = "0.12"  # Certificate generation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# GUI Framework
egui = "0.26"
eframe = { version = "0.26", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

# Screen capture and input simulation
screenshots = "0.8"
image = "0.24"
scrap = "0.5"  # Screen recording
enigo = "0.2"  # Input simulation (keyboard/mouse)

# System info and clipboard
sysinfo = "0.30"
arboard = "3.3"  # Clipboard access

# Compression
lz4_flex = "0.11"

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Cross-platform paths
dirs = "5.0"

# Audio (for future voice chat feature)
cpal = "0.15"

# File transfer
walkdir = "2.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef"] }

[target.'cfg(unix)'.dependencies]
x11 = "2.21"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true

[[bin]]
name = "freeviewer"
path = "src/main.rs"

[[bin]]
name = "freeviewer-daemon"
path = "src/daemon/main.rs"
